# Cm04-GLM-cc

./: .env.example  AGENTS.md  DEPLOYMENT_FIX.md  README.md  pyproject.toml  requirements.txt
config/: nginx.conf
docs/: API.md  DEPLOYMENT.md
src/api/: main.py  websocket_manager.py
src/cli/: cm04_monitor.py  cm04_scan.py
src/config/: settings.py
src/core/: access_analyzer.py  report_generator.py  scanner.py  ssh_engine.py
src/models/: schemas.py
src/utils/: exceptions.py  logger.py
static/: index.html
static/css/: style.css
static/js/: app.js
